--- a/index.html
+++ b/index.html
@@ -38,24 +38,31 @@
         <p>
             A EBEC (European BEST Engineering Competition) é uma competição de engenharia europeia, que proporciona aos estudantes a oportunidade de desenvolver trabalho em equipa e testar a sua criatividade e adaptabilidade, através da resolução de um problema de uma das duas categorias: <strong>Case Study</strong> e <strong>Team Design</strong>.
         </p>
+        <div class="cs-td">
+            <section class="case-study">
+                <div class="cs_icon">
+                    <img src="./icons/case-study-icon.svg" alt="Ícone do Case Study">
+                    <h3>Case Study</h3>
+                </div>
+                <img src="./images/case-study.jpg" alt="Imagem representativa do Case Study" class="foto-cs">
+                <p>
+                    Consiste em encontrar uma solução para um problema de tecnologia pela elaboração de uma possí­vel estratégia de combate ao problema abordado, num prazo de tempo de 24H.
+                </p>
+            </section>
 
-        <section class="case-study-section">
-            <img src="./icons/case-study-icon.svg" alt="Ícone do Case Study" class="icon-cs">
-            <h3 class="cs">Case Study</h3>
-            <img src="./images/case-study.jpg" alt="Imagem representativa do Case Study" class="foto-cs">
-            <p>
-                Consiste em encontrar uma solução para um problema de tecnologia pela elaboração de uma possí­vel estratégia de combate ao problema abordado, também num prazo de tempo de 24H.
-            </p>
-        </section>
+            <span></span>
 
-        <section class="team-Design">
-            <h3 class="td">Team Design</h3>
-            <img src="./images/Team-Design.jpg" alt="Imagem representativa do Team Design">
-            <p>
-                Consiste em resolver, projectar, e construir, um protótipo criativo e funcional, dentro de um prazo de tempo de 24H e com um limite de materiais disponibilizados.
-            </p>
-        </section>
-
+            <section class="team-design">
+                <div class="td_icon">
+                    <img src="./icons/Team-Design-icon.svg" alt="Ícone do Team Design">
+                    <h3>Team Design</h3>
+                </div>
+                <img src="./images/Team-Design.jpg" alt="Imagem representativa do Team Design" class="foto-td">
+                <p>
+                    Consiste em resolver, projectar, e construir, um protótipo criativo e funcional, dentro de um prazo de tempo de 24H e com um limite de materiais disponibilizados.
+                </p>
+            </section>
+        </div>
         <section class="EBEC-trajectory">
             <p>
                 A EBEC Portugal é a segunda fase da competição, onde os vencedores das rondas locais (Almada, Aveiro, Coimbra, Lisboa e Porto) competirão entre si e onde serão apuradas as duas equipas vencedoras que representarão Portugal na fase final da competição, que será realizada em Madrid, Espanha no mês de julho de 2021. Esta é a 12ª edição da EBEC Portugal, realizar-se-á  na Universidade de Coimbra, de xx a xx de abril de 2021.
@@ -65,13 +72,20 @@
     </section>
 
     <section class="local-rounds">
+        <span></span>
         <h2>Rondas Locais</h2>
-        <img src="./images/Mapa-Portugal.svg" alt="Mapa de Portugal, com marcação nas cidades correspondentes">
-        <a href="#">EBEC Porto</a>
-        <a href="#">EBEC Aveiro</a>
-        <a href="#">EBEC Coimbra</a>
-        <a href="#">EBEC Lisboa</a>
-        <a href="#">EBEC Almada</a>
+        <span></span>
+        <div class="map">
+            <ul>
+                <li><a href="#" class="porto">EBEC Porto</a></li>
+                <li><a href="#" class="aveiro">EBEC Aveiro</a></li>
+                <li><a href="#" class="coimbra">EBEC Coimbra</a></li>
+                <li><a href="#" class="lisboa">EBEC Lisboa</a></li>
+                <li><a href="#" class="almada">EBEC Almada</a></li>
+            </ul>
+
+            <img src="./images/Mapa-Portugal.svg" alt="Mapa de Portugal, com marcação nas cidades correspondentes">
+        </div>
     </section>
 
     <section class="schedule/survival-guide">
