--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </ul>
                 <picture>
                     <source srcset="./images/Mapa-Portugal-pequeno.svg" media="(max-width: 600px)">
-                    <img src="./images/Mapa-Portugal.png" alt="Mapa de Portugal">
+                    <img src="./images/Mapa-Portugal.svg" alt="Mapa de Portugal">
                 </picture>
             </div>
         </section>
