--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             <source srcset="./images/Logo-EBEC-Branco-reduzida.svg" media="(max-width: 1190px)">
             <img src="./images/logo-EBEC-Branco.png" alt="EBEC Portugal Logo">   
         </picture>
-        <div class="top-nav">
-            <a>Home</a>
-            <a>Rondas Locais</a>
-            <a>Horários / Guia de Sobrevivência</a>
-            <a>Localização</a>
-            <a>Participantes</a>
-            <a>Transmissões</a>
-            <a>Organização</a>
+        <div id="top-nav">
+            <a href="#home">Home</a>
+            <a href="#local-rounds">Rondas Locais</a>
+            <a href="#schedule_survival-guide">Horários / Guia de Sobrevivência</a>
+            <a href="#location">Localização</a>
+            <a href="#participants">Participantes</a>
+            <a href="#lives">Transmissões</a>
+            <a href="#span-organizers">Organização</a>
         </div>
     </header>
 
@@ -83,7 +83,7 @@
             </section>
         </section>
 
-        <section class="local-rounds">
+        <section id="local-rounds">
             <span></span>
             <h2>Rondas Locais</h2>
             <span></span>
@@ -102,7 +102,7 @@
             </div>
         </section>
 
-        <section class="schedule_survival-guide">
+        <section id="schedule_survival-guide">
             <span></span>
             <h2>Horários / Guia de sobrevivência</h2>
             <span></span>
@@ -113,14 +113,14 @@
             <a href="#">Download do guia de sobrevivência</a>
         </section>
 
-        <section class="location">
+        <section id="location">
             <span></span>
             <h2>Localização</h2>
             <span></span>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3047.0127422136443!2d-8.426116287440767!3d40.20877950217913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd22f909b72d402f%3A0x2c4969e6ec176a72!2sUniversidade%20de%20Coimbra!5e0!3m2!1spt-PT!2spt!4v1608592120503!5m2!1spt-PT!2spt" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </section>
 
-        <section class="participants">
+        <section id="participants">
             <span></span>
             <h2>Participantes</h2>
             <span></span>
@@ -150,7 +150,7 @@
             </section>
         </div>
 
-        <section class="lives">
+        <section id="lives">
             <span></span>
             <h2>Transmissões ao vivo</h2>
             <span></span>
@@ -160,7 +160,7 @@
             </div>
         </section>
 
-        <section class="partners">
+        <section id="partners">
             <span></span>
             <h2>Parceiros</h2>
             <span></span>
@@ -171,7 +171,7 @@
 
         </section>
 
-        <section class="universities">
+        <section id="universities">
             <span></span>
             <h2>Universidades envolvidas</h2>
             <span></span>
@@ -186,9 +186,9 @@
             </div>
         </section>
 
-        <span class="span-organizers"></span>
+        <span id="span-organizers"></span>
         <h2>Organização</h2>
-        <span class="span-organizers"></span>
+        <span id="span-organizers"></span>
 
         <section class="organizers">
             
@@ -319,7 +319,7 @@
     </section>
 
     <footer>
-        <p>Copyright EBEC PT 2021</p>
+        <p>Copyright © EBEC PT 2021</p>
     </footer>
 </body>
 </html>
